kube/configs/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-api
  labels:
    app: rs-api
spec:
  selector:
    matchLabels:
      app: rs-api
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: rs-api
    spec:
      containers:
        - name: rs-api
          image: julianpoy/recipesage:api-$RELEASE_TAG
          ports:
            - containerPort: 3000
          command: ["npx"]
          args:
            [
              "--yes",
              "ts-node",
              "--swc",
              "--project",
              "packages/backend/tsconfig.json",
              "packages/backend/src/bin/www",
            ]
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 2
            periodSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 300Mi
            limits:
              cpu: 1
              memory: 1G
          volumeMounts:
            - name: firebase-credentials
              mountPath: /app/packages/backend/src/config/firebase-credentials.json
              subPath: firebase-credentials.json
      volumes:
        - name: firebase-credentials
          configMap:
            name: firebase-credentials
      imagePullSecrets:
        - name: myregistrykey
      terminationGracePeriodSeconds: 900
---
apiVersion: v1
kind: Service
metadata:
  name: rs-api
spec:
  type: ClusterIP
  selector:
    app: rs-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
