kube/configs/browserless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-browserless
  labels:
    app: rs-browserless
spec:
  selector:
    matchLabels:
      app: rs-browserless
  template:
    metadata:
      labels:
        app: rs-browserless
    spec:
      containers:
      - name: rs-browserless
        image: browserless/chrome:1.53.0-chrome-stable
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 1.2
            memory: 700Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-browserless
spec:
  type: ClusterIP
  selector:
    app: rs-browserless
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
