kube/configs/elastic.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rs-elastic
spec:
  serviceName: rs-elastic
  replicas: 1
  selector:
    matchLabels:
      app: rs-elastic
  template:
    metadata:
      labels:
        app: rs-elastic
    spec:
      containers:
      - name: rs-elastic
        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
        ports:
          - containerPort: 9200
            name: http
            protocol: TCP
        resources:
          requests:
            cpu: 0.5
            memory: 2Gi
          limits:
            cpu: 1.5
            memory: 3Gi
        volumeMounts:
        # - name: config
        #   mountPath: /usr/share/elasticsearch/elasticsearch.yml
        #   subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: rs-elastic
spec:
  type: ClusterIP
  selector:
    app: rs-elastic
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
