kube/configs/ingredient-instruction-classifier.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-ingredient-instruction-classifier
  labels:
    app: rs-ingredient-instruction-classifier
spec:
  selector:
    matchLabels:
      app: rs-ingredient-instruction-classifier
  template:
    metadata:
      labels:
        app: rs-ingredient-instruction-classifier
    spec:
      containers:
        - name: rs-ingredient-instruction-classifier
          image: julianpoy/ingredient-instruction-classifier:1.4.10
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 700Mi
            limits:
              cpu: 1
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-ingredient-instruction-classifier
spec:
  type: ClusterIP
  selector:
    app: rs-ingredient-instruction-classifier
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
