kube/configs/pgsync.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-pgsync
  labels:
    app: rs-pgsync
spec:
  selector:
    matchLabels:
      app: rs-pgsync
  template:
    metadata:
      labels:
        app: rs-pgsync
    spec:
      containers:
      - name: rs-pgsync
        image: julianpoy/pgsync:2.5.0
        volumeMounts:
        - name: pgsync-schema
          mountPath: /schema.json
          subPath: pgsync.schema.json
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-pgsync_redis
  labels:
    app: rs-pgsync_redis
spec:
  selector:
    matchLabels:
      app: rs-pgsync_redis
  template:
    metadata:
      labels:
        app: rs-pgsync_redis
    spec:
      containers:
      - name: rs-pgsync_redis
        image: redis
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-pgsync_redis
spec:
  type: ClusterIP
  selector:
    app: rs-pgsync_redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
