kube/configs/pushpin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-pushpin
  labels:
    app: rs-pushpin
spec:
  selector:
    matchLabels:
      app: rs-pushpin
  template:
    metadata:
      labels:
        app: rs-pushpin
    spec:
      containers:
      - name: rs-pushpin
        image: fanout/pushpin:1.27.0
        command: ["/bin/sh", "-c"]
        args: ["docker-entrypoint.sh && sed -i 's/sig_key=changeme/sig_key=$(GRIP_KEY)/' /etc/pushpin/pushpin.conf && pushpin"]
        ports:
        - containerPort: 7999
        - containerPort: 5561
        resources:
          requests:
            cpu: 50m
            memory: 15Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-pushpin
spec:
  type: ClusterIP
  selector:
    app: rs-pushpin
  ports:
    - name: ws-connector
      protocol: TCP
      port: 7999
      targetPort: 7999
    - name: broadcast-connector
      protocol: TCP
      port: 5561
      targetPort: 5561
