kube/configs/static-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-static-proxy
  labels:
    app: rs-static-proxy
spec:
  selector:
    matchLabels:
      app: rs-static-proxy
  template:
    metadata:
      labels:
        app: rs-static-proxy
    spec:
      containers:
      - name: rs-static-proxy
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 300Mi
        volumeMounts:
        - name: rs-static-proxy-default
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: rs-static-proxy-default
        configMap:
          name: rs-static-proxy-default
---
apiVersion: v1
kind: Service
metadata:
  name: rs-static-proxy
spec:
  type: ClusterIP
  selector:
    app: rs-static-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
