kube/configs/typesense.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rs-typesense
spec:
  serviceName: rs-typesense
  replicas: 1
  selector:
    matchLabels:
      app: rs-typesense
  template:
    metadata:
      labels:
        app: rs-typesense
    spec:
      containers:
        - name: rs-typesense
          image: typesense/typesense:0.24.1
          ports:
            - containerPort: 8108
              name: http
              protocol: TCP
          command:
            [
              "/opt/typesense-server",
              "--data-dir",
              "/data",
              "--api-key=$(TYPESENSE_API_KEY)",
              "--enable-cors",
            ]
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 2
              memory: 3Gi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: typesense-data
---
apiVersion: v1
kind: Service
metadata:
  name: rs-typesense
spec:
  type: ClusterIP
  selector:
    app: rs-typesense
  ports:
    - protocol: TCP
      port: 8108
      targetPort: 8108
