kube/configs/weblate.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rs-weblate
spec:
  selector:
    matchLabels:
      app: rs-weblate
  template:
    metadata:
      labels:
        app: rs-weblate
    spec:
      containers:
        - name: rs-weblate
          image: weblate/weblate:5.4.3.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 0.2
              memory: 1.5Gi
            limits:
              cpu: 2
              memory: 3Gi
          volumeMounts:
            - name: rs-weblate-data
              mountPath: /app/data
            - name: rs-weblate-cache
              mountPath: /app/cache
      volumes:
        - name: rs-weblate-data
          persistentVolumeClaim:
            claimName: rs-weblate-data
        - name: rs-weblate-cache
          emptyDir:
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-weblate
spec:
  type: ClusterIP
  selector:
    app: rs-weblate
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rs-weblate-postgres
spec:
  selector:
    matchLabels:
      app: rs-weblate-postgres
  template:
    metadata:
      labels:
        app: rs-weblate-postgres
    spec:
      containers:
        - name: rs-weblate-postgres
          image: postgres:15.4
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 0.1
              memory: 250Mi
            limits:
              cpu: 1
              memory: 250Mi
          volumeMounts:
            - name: rs-weblate-postgres-data
              subPath: postgres
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: rs-weblate-postgres-data
          persistentVolumeClaim:
            claimName: rs-weblate-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: rs-weblate-postgres
spec:
  type: ClusterIP
  selector:
    app: rs-weblate-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rs-weblate-redis
spec:
  selector:
    matchLabels:
      app: rs-weblate-redis
  template:
    metadata:
      labels:
        app: rs-weblate-redis
    spec:
      containers:
        - name: rs-weblate-redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 0.1
              memory: 50Mi
            limits:
              cpu: 1
              memory: 150Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rs-weblate-redis
spec:
  type: ClusterIP
  selector:
    app: rs-weblate-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
