kube/configs/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 800m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 5;
      gzip_buffers 16 8k;
      gzip_http_version 1.1;
      gzip_min_length 768;

      gzip_types
      application/atom+xml
      application/javascript
      application/json
      application/ld+json
      application/manifest+json
      application/rss+xml
      application/vnd.geo+json
      application/vnd.ms-fontobject
      application/x-font-ttf
      application/x-web-app-manifest+json
      application/xhtml+xml
      application/xml
      font/opentype
      image/bmp
      image/svg+xml
      image/x-icon
      text/cache-manifest
      text/css
      text/plain
      text/vcard
      text/vnd.rim.location.xloc
      text/vtt
      text/x-component
      text/x-cross-domain-policy;
spec:
  rules:
  - http:
  - host: api.recipesage.com
    http:
      paths:
      - path: /(api/?)?(.*)
        backend:
          serviceName: rs-api
          servicePort: 3000
  - host: grip.recipesage.com
    http:
      paths:
      - path: /(grip/)?(ws)
        backend:
          serviceName: rs-pushpin
          servicePort: 7999
  tls:
  - hosts:
    - recipesage.com
    - www.recipesage.com
    - beta.recipesage.com
    - staging.recipesage.com
    - api.recipesage.com
    - grip.recipesage.com
    secretName: rs-tls
